fixed dark mode toggle (for real this time) + fixed mogu mogu audio + updated styles

--- a/static/styles.css
+++ b/static/styles.css
@@ -2,20 +2,46 @@
 	--primary-color: #8327ce;
 	--secondary-color: #191919;
 	--accent-color: #ae5bbe;
-	--text-color: #050316;
-	--text-color-alt: #616161;
-	--text-background-color: rgba(251, 251, 251, 0.9);
-	--text-background-color-alt: rgba(0, 0, 0, 0.05);
+
+	--header: white;
+
+	--text-heading: #050316;
+	--text-body: #110f24;
+	--text-muted: #616161;
+
+	--surface-main: rgba(251, 251, 251, 0.9);
+	--surface-nested: rgba(0, 0, 0, 0.05);
+	--border-divider: rgba(5, 3, 22, 0.1);
+
+	--link-color: var(--accent-color);
+	--link-hover: #cf7dfc;
+	--btn-bg: var(--primary-color);
+	--btn-hover: #9c3df5;
+
+	--toggle-btn-bg: #371d49;
+	--toggle-btn-text: #ffffff;
+
 	--background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("/static/img/wallpaper.webp");
 }
 
 :root.dark {
 	--primary-color: #6c3894;
 	--accent-color: #e48af5;
-	--text-color: #f5f5f5;
-	--text-color-alt: #adadad;
-	--text-background-color: rgba(30, 30, 30, 0.9);
-	--text-background-color-alt: rgba(255, 255, 255, 0.05);
+
+	--text-heading: #ffffff;
+    --text-body: #e2e1e9;
+    --text-muted: #a0a0a0;
+
+    --surface-main: rgba(30, 30, 30, 0.9);
+    --surface-nested: rgba(255, 255, 255, 0.05);
+    --border-divider: rgba(255, 255, 255, 0.15);
+
+    --link-hover: #f3d5ff;
+    --btn-hover: #bc6eff;
+
+	--toggle-btn-bg: #f2f2f2;
+	--toggle-btn-text: #000000;
+
 	--background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/img/wallpaper.webp");
 }
 
@@ -119,16 +145,16 @@ a {
     color: var(--accent-color);
 }
 
-a:hover {
+a:hover, button:hover {
     filter: brightness(1.3);
 }
 
 blockquote {
 	margin: 0 1em;
-	border-left: 4px solid var(--primary-color);
+	border-left: 4px solid var(--accent-color);
 	padding: 10px 20px;
-	color: var(--text-color-alt);
-    background-color: var(--text-background-color-alt);
+	color: var(--text-muted);
+    background-color: var(--surface-nested);
     font-style: italic;
 }
 
@@ -151,8 +177,8 @@ iframe {
     width: 100%;
     margin: auto;
     padding: 40px;
-    background-color: var(--text-background-color);
-    color: var(--text-color);
+    background-color: var(--surface-main);
+    color: var(--text-body);
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -186,11 +212,11 @@ iframe {
 }
 
 .header a {
-    color: white;
+    color: var(--header);
 }
 
 .header a:hover {
-    text-shadow: 0 0 1px white, 0 0 1px white;
+    text-shadow: 0 0 1px var(--header), 0 0 1px var(--header);
 }
 
 nav {
@@ -217,7 +243,7 @@ nav > * {
     flex: 0 0 32px;
     width: 100%;
     background-color: var(--secondary-color);
-    color: #fff;
+    color: var(--header);
     z-index: 10;
     display: flex;
     justify-content: right;
@@ -248,9 +274,9 @@ nav > * {
 }
 
 .socials {
-    color: #ffffff;
     vertical-align: middle;
     font-style: normal;
+	color: inherit;
 }
 
 .logo-socials {
@@ -261,19 +287,19 @@ nav > * {
     fill: currentColor;
 }
 
+#twitter-link:hover { color: rgb(66, 180, 255); }
+#youtube-link:hover { color: rgb(255, 0, 0); }
+#twitch-link:hover  { color: rgb(168, 113, 248); }
+
 .footnote {
     margin-top: auto;
     text-align: right;
     width: 100%;
 }
 
-#twitter-link:hover { color: rgb(66, 180, 255); }
-#youtube-link:hover { color: rgb(255, 0, 0); }
-#twitch-link:hover  { color: rgb(168, 113, 248); }
-
 .dark-mode-button {
-	color: white;
-	background-color: #371d49;
+	color: var(--toggle-btn-text);
+	background-color: var(--toggle-btn-bg);
     border: none;
     padding: 10px 1vw;
     text-align: center;
@@ -281,15 +307,7 @@ nav > * {
     display: inline-block;
     cursor: pointer;
     border-radius: 12px;
-}
-
-.dark-mode-button:hover {
-    background-color: #000000;
-}
-
-.dark-mode-button.dark {
-	color: black;
-    background-color: #ffffff;
+	min-width: 100px;
 }
 
 .DotAnim {
@@ -300,8 +318,8 @@ nav > * {
 }
 
 @keyframes DotAnim {
-    0%   { color: var(--text-color); }
-    100% { color: var(--text-background-color); }
+    0%   { color: var(--text-body); }
+    100% { color: var(--surface-main); }
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
